--- a/print.html
+++ b/print.html
@@ -76,7 +76,7 @@
 
     <nav id="sidebar" class="sidebar" aria-label="Table of contents">
         <div class="sidebar-scrollbox">
-            <ol class="chapter"><li class="chapter-item expanded "><a href="intro/intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded "><a href="go/go.html"><strong aria-hidden="true">2.</strong> GO</a></li><li class="chapter-item expanded "><a href="rust/rust.html"><strong aria-hidden="true">3.</strong> RUST</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/tower/rust_tower.html"><strong aria-hidden="true">3.1.</strong> Tower</a></li><li class="chapter-item "><a href="rust/mini-redis/mini-redis.html"><strong aria-hidden="true">3.2.</strong> mini-redis</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/mini-redis/hello_tokio.html"><strong aria-hidden="true">3.2.1.</strong> Hello Tokio</a></li><li class="chapter-item "><a href="rust/mini-redis/spawning.html"><strong aria-hidden="true">3.2.2.</strong> Spawning</a></li><li class="chapter-item "><a href="rust/mini-redis/shared_state.html"><strong aria-hidden="true">3.2.3.</strong> Shared state</a></li><li class="chapter-item "><a href="rust/mini-redis/channels.html"><strong aria-hidden="true">3.2.4.</strong> Channels</a></li><li class="chapter-item "><a href="rust/mini-redis/io.html"><strong aria-hidden="true">3.2.5.</strong> I/O</a></li><li class="chapter-item "><a href="rust/mini-redis/framing.html"><strong aria-hidden="true">3.2.6.</strong> Framing</a></li><li class="chapter-item "><a href="rust/mini-redis/async_in_depth.html"><strong aria-hidden="true">3.2.7.</strong> Async in depth</a></li><li class="chapter-item "><a href="rust/mini-redis/select.html"><strong aria-hidden="true">3.2.8.</strong> Select</a></li><li class="chapter-item "><a href="rust/mini-redis/streams.html"><strong aria-hidden="true">3.2.9.</strong> Streams</a></li></ol></li><li class="chapter-item "><a href="rust/tokio/tokio.html"><strong aria-hidden="true">3.3.</strong> Tokio</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/tokio/topics.html"><strong aria-hidden="true">3.3.1.</strong> Topics TODO</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/tokio/bridging_with_sync_code.html"><strong aria-hidden="true">3.3.1.1.</strong> Bridging with sync code TODO</a></li><li class="chapter-item "><a href="rust/tokio/graceful_shutdown.html"><strong aria-hidden="true">3.3.1.2.</strong> Graceful Shutdown TODO</a></li><li class="chapter-item "><a href="rust/tokio/getting_started_with_tracing.html"><strong aria-hidden="true">3.3.1.3.</strong> Getting started with Tracing TODO</a></li><li class="chapter-item "><a href="rust/tokio/next_steps_with_tracing.html"><strong aria-hidden="true">3.3.1.4.</strong> Next steps with Tracing TODO</a></li></ol></li></ol></li></ol></li><li class="chapter-item expanded "><a href="other-categories/other-categories.html"><strong aria-hidden="true">4.</strong> Other categories</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="other-categories/archlinux/archlinux.html"><strong aria-hidden="true">4.1.</strong> archlinux</a></li><li class="chapter-item "><a href="other-categories/nc/nc.html"><strong aria-hidden="true">4.2.</strong> nmap-netcat(nc)</a></li><li class="chapter-item "><a href="other-categories/mkcert/mkcert.html"><strong aria-hidden="true">4.3.</strong> mkcert</a></li><li class="chapter-item "><a href="other-categories/aria2/aria2.html"><strong aria-hidden="true">4.4.</strong> aria2</a></li><li class="chapter-item "><a href="other-categories/postgres/postgres.html"><strong aria-hidden="true">4.5.</strong> postgres</a></li><li class="chapter-item "><a href="other-categories/pre-commit/pre-commit.html"><strong aria-hidden="true">4.6.</strong> pre-commit</a></li><li class="chapter-item "><a href="other-categories/minio/minio.html"><strong aria-hidden="true">4.7.</strong> minio</a></li></ol></li><li class="chapter-item expanded "><a href="blockchain/blockchain.html"><strong aria-hidden="true">5.</strong> Blockchain</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="blockchain/substrate/substrate.html"><strong aria-hidden="true">5.1.</strong> substrate TODO</a></li></ol></li><li class="chapter-item expanded "><a href="issues/issues.html"><strong aria-hidden="true">6.</strong> issues and solutions</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="issues/docker/docker.html"><strong aria-hidden="true">6.1.</strong> docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="issues/docker/docker_issues.html"><strong aria-hidden="true">6.1.1.</strong> 问题及解决方案</a></li></ol></li><li class="chapter-item "><a href="issues/mysql/mysql.html"><strong aria-hidden="true">6.2.</strong> mysql</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="issues/mysql/mysql_issues.html"><strong aria-hidden="true">6.2.1.</strong> 问题及解决方案</a></li></ol></li><li class="chapter-item "><a href="issues/gitea/gitea.html"><strong aria-hidden="true">6.3.</strong> gitea</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="issues/gitea/gitea_issues.html"><strong aria-hidden="true">6.3.1.</strong> 问题及解决方案</a></li></ol></li><li class="chapter-item "><a href="issues/nginx/nginx.html"><strong aria-hidden="true">6.4.</strong> nginx</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="issues/nginx/nginx_issues.html"><strong aria-hidden="true">6.4.1.</strong> 问题及解决方案</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="links/links.html"><strong aria-hidden="true">7.</strong> Links</a></li></ol>
+            <ol class="chapter"><li class="chapter-item expanded "><a href="intro/intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded "><a href="go/go.html"><strong aria-hidden="true">2.</strong> GO</a></li><li class="chapter-item expanded "><a href="rust/rust.html"><strong aria-hidden="true">3.</strong> RUST</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/tower/rust_tower.html"><strong aria-hidden="true">3.1.</strong> Tower</a></li><li class="chapter-item "><a href="rust/mini-redis/mini-redis.html"><strong aria-hidden="true">3.2.</strong> mini-redis</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/mini-redis/hello_tokio.html"><strong aria-hidden="true">3.2.1.</strong> Hello Tokio</a></li><li class="chapter-item "><a href="rust/mini-redis/spawning.html"><strong aria-hidden="true">3.2.2.</strong> Spawning</a></li><li class="chapter-item "><a href="rust/mini-redis/shared_state.html"><strong aria-hidden="true">3.2.3.</strong> Shared state</a></li><li class="chapter-item "><a href="rust/mini-redis/channels.html"><strong aria-hidden="true">3.2.4.</strong> Channels</a></li><li class="chapter-item "><a href="rust/mini-redis/io.html"><strong aria-hidden="true">3.2.5.</strong> I/O</a></li><li class="chapter-item "><a href="rust/mini-redis/framing.html"><strong aria-hidden="true">3.2.6.</strong> Framing</a></li><li class="chapter-item "><a href="rust/mini-redis/async_in_depth.html"><strong aria-hidden="true">3.2.7.</strong> Async in depth</a></li><li class="chapter-item "><a href="rust/mini-redis/select.html"><strong aria-hidden="true">3.2.8.</strong> Select</a></li><li class="chapter-item "><a href="rust/mini-redis/streams.html"><strong aria-hidden="true">3.2.9.</strong> Streams</a></li></ol></li><li class="chapter-item "><a href="rust/tokio/tokio.html"><strong aria-hidden="true">3.3.</strong> Tokio</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/tokio/topics.html"><strong aria-hidden="true">3.3.1.</strong> Topics TODO</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/tokio/bridging_with_sync_code.html"><strong aria-hidden="true">3.3.1.1.</strong> Bridging with sync code TODO</a></li><li class="chapter-item "><a href="rust/tokio/graceful_shutdown.html"><strong aria-hidden="true">3.3.1.2.</strong> Graceful Shutdown TODO</a></li><li class="chapter-item "><a href="rust/tokio/getting_started_with_tracing.html"><strong aria-hidden="true">3.3.1.3.</strong> Getting started with Tracing TODO</a></li><li class="chapter-item "><a href="rust/tokio/next_steps_with_tracing.html"><strong aria-hidden="true">3.3.1.4.</strong> Next steps with Tracing TODO</a></li></ol></li></ol></li></ol></li><li class="chapter-item expanded "><a href="other-categories/other-categories.html"><strong aria-hidden="true">4.</strong> Other categories</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="other-categories/archlinux/archlinux.html"><strong aria-hidden="true">4.1.</strong> archlinux</a></li><li class="chapter-item "><a href="other-categories/nc/nc.html"><strong aria-hidden="true">4.2.</strong> nmap-netcat(nc)</a></li><li class="chapter-item "><a href="other-categories/mkcert/mkcert.html"><strong aria-hidden="true">4.3.</strong> mkcert</a></li><li class="chapter-item "><a href="other-categories/aria2/aria2.html"><strong aria-hidden="true">4.4.</strong> aria2</a></li><li class="chapter-item "><a href="other-categories/postgres/postgres.html"><strong aria-hidden="true">4.5.</strong> postgres</a></li><li class="chapter-item "><a href="other-categories/pre-commit/pre-commit.html"><strong aria-hidden="true">4.6.</strong> pre-commit</a></li><li class="chapter-item "><a href="other-categories/minio/minio.html"><strong aria-hidden="true">4.7.</strong> minio</a></li><li class="chapter-item "><a href="other-categories/git/git.html"><strong aria-hidden="true">4.8.</strong> git</a></li></ol></li><li class="chapter-item expanded "><a href="blockchain/blockchain.html"><strong aria-hidden="true">5.</strong> Blockchain</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="blockchain/substrate/substrate.html"><strong aria-hidden="true">5.1.</strong> substrate TODO</a></li></ol></li><li class="chapter-item expanded "><a href="issues/issues.html"><strong aria-hidden="true">6.</strong> issues and solutions</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="issues/docker/docker.html"><strong aria-hidden="true">6.1.</strong> docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="issues/docker/docker_issues.html"><strong aria-hidden="true">6.1.1.</strong> 问题及解决方案</a></li></ol></li><li class="chapter-item "><a href="issues/mysql/mysql.html"><strong aria-hidden="true">6.2.</strong> mysql</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="issues/mysql/mysql_issues.html"><strong aria-hidden="true">6.2.1.</strong> 问题及解决方案</a></li></ol></li><li class="chapter-item "><a href="issues/gitea/gitea.html"><strong aria-hidden="true">6.3.</strong> gitea</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="issues/gitea/gitea_issues.html"><strong aria-hidden="true">6.3.1.</strong> 问题及解决方案</a></li></ol></li><li class="chapter-item "><a href="issues/nginx/nginx.html"><strong aria-hidden="true">6.4.</strong> nginx</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="issues/nginx/nginx_issues.html"><strong aria-hidden="true">6.4.1.</strong> 问题及解决方案</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="links/links.html"><strong aria-hidden="true">7.</strong> Links</a></li></ol>
         </div>
         <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
     </nav>
@@ -4825,6 +4825,166 @@ http {
 <pre><code class="language-bash">$ docker compose up -d
 # -or-
 $ docker-compose up -d
+</code></pre>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
+<h1 id="git-基本操作"><a class="header" href="#git-基本操作">Git 基本操作</a></h1>
+<p>下面介绍常见的 git 使用姿势：</p>
+<p><strong>1.初始化本地仓库</strong></p>
+<pre><code>git init &lt;directory&gt;
+</code></pre>
+<p><code>&lt;directory&gt;</code> 是可选的，如果不指定，将使用当前目录。</p>
+<p><strong>2.克隆一个远程仓库</strong></p>
+<pre><code>git clone &lt;url&gt;
+</code></pre>
+<p><strong>3.添加文件到暂存区</strong></p>
+<pre><code>git add &lt;file&gt;
+</code></pre>
+<p>要添加当前目录中的所有文件，请使用 . 代替 <code>&lt;file&gt;</code>,代码如下：</p>
+<pre><code>git add .
+</code></pre>
+<p><strong>4. 提交更改</strong></p>
+<pre><code>git commit -m &quot;&lt;message&gt;&quot;
+</code></pre>
+<p>如果要添加对跟踪文件所做的所有更改并提交。</p>
+<pre><code>git commit -a -m &quot;&lt;message&gt;&quot;
+</code></pre>
+<p><strong>5.从暂存区删除一个文件</strong></p>
+<pre><code>git reset &lt;file&gt;
+</code></pre>
+<p><strong>6.移动或重命名文件</strong></p>
+<pre><code>git mv &lt;current path&gt; &lt;new path&gt;
+</code></pre>
+<p><strong>7. 从存储库中删除文件</strong></p>
+<pre><code>git rm &lt;file&gt;
+</code></pre>
+<p>您也可以仅使用 <code>--cached</code> 标志将其从暂存区中删除</p>
+<pre><code>git rm --cached &lt;file&gt;
+</code></pre>
+<p><strong>基本 Git 概念</strong></p>
+<p><strong>8.默认分支名称：main</strong></p>
+<p><strong>9.默认远程名称：origin</strong></p>
+<p><strong>10.当前分支参考：HEAD</strong></p>
+<p><strong>11. HEAD 的父级：HEAD^ 或 HEAD~1</strong></p>
+<p><strong>12. HEAD 的祖父母：HEAD^^ 或 HEAD~2</strong></p>
+<p><strong>13. 显示分支</strong></p>
+<pre><code>git branch
+</code></pre>
+<p><strong>有用的标志：</strong></p>
+<p><code>-a</code>：显示所有分支（本地和远程）</p>
+<p><code>-r</code>：显示远程分支</p>
+<p><code>-v</code>：显示最后一次提交的分支</p>
+<p><strong>14.创建一个分支</strong></p>
+<pre><code>git branch &lt;branch&gt;
+</code></pre>
+<p>你可以创建一个分支并使用 <code>checkout</code> 命令切换到它。</p>
+<pre><code>git checkout -b &lt;branch&gt;
+</code></pre>
+<p><strong>15.切换到一个分支</strong></p>
+<pre><code>git checkout &lt;branch&gt;
+</code></pre>
+<p><strong>16.删除一个分支</strong></p>
+<pre><code>git branch -d &lt;branch&gt;
+</code></pre>
+<p>您还可以使用 <code>-D</code> 标志强制删除分支。</p>
+<pre><code>git branch -D &lt;branch&gt;
+</code></pre>
+<p><strong>17.合并分支</strong></p>
+<pre><code>git merge &lt;branch to merge into HEAD&gt;
+</code></pre>
+<p><strong>有用的标志：</strong></p>
+<p><code>--no-ff</code>：即使合并解析为快进，也创建合并提交</p>
+<p><code>--squash</code>：将指定分支中的所有提交压缩为单个提交</p>
+<p>建议不要使用 <code>--squash</code> 标志，因为它会将所有提交压缩为单个提交，从而导致提交历史混乱。</p>
+<p><strong>18. 变基分支</strong></p>
+<p>变基是将一系列提交移动或组合到新的基本提交的过程。</p>
+<pre><code>git rebase &lt;branch to rebase from&gt;
+</code></pre>
+<p><strong>19. 查看之前的提交</strong></p>
+<pre><code>git checkout &lt;commit id&gt;
+</code></pre>
+<p><strong>20. 恢复提交</strong></p>
+<pre><code>git revert &lt;commit id&gt;
+</code></pre>
+<p><strong>21. 重置提交</strong></p>
+<pre><code>git reset &lt;commit id&gt;
+</code></pre>
+<p>您还可以添加 <code>--hard</code> 标志来删除所有更改，但请谨慎使用。</p>
+<pre><code>git reset --hard &lt;commit id&gt;
+</code></pre>
+<p><strong>22.查看存储库的状态</strong></p>
+<pre><code>git status
+</code></pre>
+<p><strong>23.显示提交历史</strong></p>
+<pre><code>git log
+</code></pre>
+<p><strong>24.显示对未暂存文件的更改</strong></p>
+<pre><code>git diff
+</code></pre>
+<p>您还可以使用 <code>--staged</code> 标志来显示对暂存文件的更改。</p>
+<pre><code>git diff --staged
+</code></pre>
+<p><strong>25.显示两次提交之间的变化</strong></p>
+<pre><code>git diff &lt;commit id 01&gt; &lt;commit id 02&gt;
+</code></pre>
+<p><strong>26. 存储更改</strong></p>
+<p><code>stash</code> 允许您在不提交更改的情况下临时存储更改。</p>
+<pre><code>git stash
+</code></pre>
+<p>您还可以将消息添加到存储中。</p>
+<pre><code>git stash save &quot;&lt;message&gt;&quot;
+</code></pre>
+<p><strong>27. 列出存储</strong></p>
+<pre><code>git stash list
+</code></pre>
+<p><strong>28.申请一个藏匿处</strong></p>
+<p>应用存储不会将其从存储列表中删除。</p>
+<pre><code>git stash apply &lt;stash id&gt;
+</code></pre>
+<p>如果不指定 <code>&lt;stash id&gt;</code>，将应用最新的 <code>stash</code>（适用于所有类似的 <code>stash</code> 命令）</p>
+<p>您还可以使用格式 <code>stash@{&lt;index&gt;}</code> 应用存储（适用于所有类似的存储命令）</p>
+<pre><code>git stash apply stash@{0}
+</code></pre>
+<p><strong>29.删除一个藏匿处</strong></p>
+<pre><code>git stash drop &lt;stash id&gt;
+</code></pre>
+<p><strong>30.删除所有藏匿处</strong></p>
+<pre><code>git stash clear
+</code></pre>
+<p><strong>31. 应用和删除存储</strong></p>
+<pre><code>git stash pop &lt;stash id&gt;
+</code></pre>
+<p><strong>32.显示存储中的更改</strong></p>
+<pre><code>git stash show &lt;stash id&gt;
+</code></pre>
+<p><strong>33.添加远程仓库</strong></p>
+<pre><code>git remote add &lt;remote name&gt; &lt;url&gt;
+</code></pre>
+<p><strong>34. 显示远程仓库</strong></p>
+<pre><code>git remote
+</code></pre>
+<p>添加 <code>-v</code> 标志以显示远程存储库的 URL。</p>
+<pre><code>git remote -v
+</code></pre>
+<p><strong>35.删除远程仓库</strong></p>
+<pre><code>git remote remove &lt;remote name&gt;
+</code></pre>
+<p><strong>36.重命名远程存储库</strong></p>
+<pre><code>git remote rename &lt;old name&gt; &lt;new name&gt;
+</code></pre>
+<p><strong>37. 从远程存储库中获取更改</strong></p>
+<pre><code>git fetch &lt;remote name&gt;
+</code></pre>
+<p><strong>38. 从特定分支获取更改</strong></p>
+<pre><code>git fetch &lt;remote name&gt; &lt;branch&gt;
+</code></pre>
+<p><strong>39. 从远程存储库中拉取更改</strong></p>
+<pre><code>git pull &lt;remote name&gt; &lt;branch&gt;
+</code></pre>
+<p><strong>40.将更改推送到远程存储库</strong></p>
+<pre><code>git push &lt;remote name&gt;
+</code></pre>
+<p><strong>41.将更改推送到特定分支</strong></p>
+<pre><code>git push &lt;remote name&gt; &lt;branch&gt;
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 <h1 id="blockchain"><a class="header" href="#blockchain">Blockchain</a></h1>
